@@ -28,18 +28,27 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
   return obj;
 }
 
+//* The setGraphics method sets the state of the display. Set the state to 0 
+//* if a graphical display of the graph is not required. The default state is 1
+//* meaning that by default the data appears graphically in a window. 
 - setGraphics: (int)state
 {
   graphics = state;
   return self;
 }
 
+//* The setFileOutput method sets the state of file I/O.  Set the state to 1 
+//* if data for the sequences is to be sent to a file.  The default state is 0
+//* meaning that by default no file I/O is carried out by the EZGraph class.
 - setFileOutput: (int)state
 {
   fileOutput = state;
   return self;
 }
 
+//* The setAxisLabels:X:Y method sets the horizontal and vertical labels on 
+//* the histogram in the graphical version of EZGraph. (Only relevant if the 
+//* state of setGraphics is set to 1.)
 - setAxisLabelsX: (const char *)xl Y:(const char *)yl
 { 
   xLabel = xl;
@@ -47,6 +56,9 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
   return self;
 }
 
+//* The setTitle method uses a title string to label a graph window in the 
+//* graphical version of EZGraph.  The label appears at the top of the graph 
+//* window. (Only relevant if the state of setGraphics is set to 1.)
 - setTitle: (const char *)aTitle
 {
   title = aTitle;
@@ -71,11 +83,14 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
   return self;
 }
 
+//* The getGraph method lets the user access the graph generated internally
+//* by the EZGraph. (Only relevant if the state of setGraphics is set to 1.)
 - getGraph
 {
   return theGraph;
 }
 
+// internal method called by createSequence:withFeedFrom:andSelector
 - createGraphSequence: (const char *)aName
           forSequence: aSeq
          withFeedFrom: anObj 
@@ -120,6 +135,11 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
   return self;
 }
 
+//* The createSequence method creates a sequence in the EZGraph based on
+//* the return value provided by the object anObj when sent the selector
+//* aSel.  If file I/O is enabled, then the data will be sent to a file with
+//* the name aName, otherwise the aName argument is simply used as the
+//* legend for the graph element generated by EZGraph.
 - createSequence: (const char *)aName
     withFeedFrom: anObj 
      andSelector: (SEL)aSel
@@ -134,6 +154,9 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
   return self;
 }
 
+//* The createAverageSequence method takes a collection of objects and 
+//* generates a sequence based on the average over the responses of the
+//* entire object set (as opposed to a single object as in createSequence)
 - createAverageSequence: (const char *)aName 
            withFeedFrom: aCollection 
             andSelector: (SEL)aSel
@@ -157,6 +180,9 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
   return self;
 }
 
+//* The createTotalSequence method takes a collection of objects and 
+//* generates a sequence based on the sum over the responses of the
+//* entire object set (as opposed to a single object as in createSequence)
 - createTotalSequence: (const char *)aName
          withFeedFrom: aCollection 
           andSelector: (SEL)aSel
@@ -180,6 +206,9 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
   return self;
 }
 
+//* The createMinSequence method takes a collection of objects and 
+//* generates a sequence based on the minimum over the responses of the
+//* entire object set (as opposed to a single object as in createSequence)
 - createMinSequence: (const char *)aName 
        withFeedFrom: aCollection 
         andSelector: (SEL)aSel
@@ -204,6 +233,9 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
 
 }
 
+//* The createMaxSequence method takes a collection of objects and 
+//* generates a sequence based on the maximums over the responses of the
+//* entire object set (as opposed to a single object as in createSequence)
 - createMaxSequence: (const char *)aName
        withFeedFrom: aCollection 
         andSelector: (SEL)aSel
@@ -228,6 +260,9 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
 
 }
 
+//* The createCountSequence method takes a collection of objects and 
+//* generates a sequence based on the count over the responses of the
+//* entire object set (as opposed to a single object as in createSequence)
 - createCountSequence: (const char *)aName
          withFeedFrom: aCollection 
           andSelector: (SEL) aSel
@@ -253,6 +288,8 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
 
 }
 
+//* The step method lets the user accest the graph generated internally by
+//* EZGraph. (Only relevant if the state of setGraphics is set to 1.)
 - step
 {
   [sequenceList forEach: M(step)];
